fix wide image alignment #3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,7 +567,7 @@ POST/ARTICLE HEADERS
 
 .kg-image-card.kg-width-wide {
     position: relative;
-    left: -4vw;
+    left: -5vw;
     width: 70vw;
 }
 
